See if we can't build the doors on the Pi too.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ include:
       platform: 'arm64'
       tagname: 'RaspberryPi'
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
+      build_doors: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: "linux"
