Allow enabling HAPROXY_PROTO for web server too
At least, that's what I want this change to do... it seems a bit too
trivial to actually work.

For Keyop, but it seems he doesn't actually want it after all.

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -330,6 +330,7 @@
 	; 	NO_HOST_LOOKUP
 	;	NO_RECYCLE
 	; 	NO_JAVASCRIPT
+	;       HAPROXY_PROTO
 	Options = NO_CGI | ALLOW_TLS | NO_HOST_LOOKUP
 	MaxConcurrentConnections = 10
 
