Get TTS-5000 nodelist parsing sorted
So all this needs now is a thing to get the public key.
The config already has the secret key I believe, so once that's there,
it can all be pieced back together and the proof of concept code
can actually be fixed.

--- a/src/tith/GNUmakefile
+++ b/src/tith/GNUmakefile
@@ -18,12 +18,14 @@ TITH_OBJS := \
 	tith-client.o \
 	tith-file.o \
 	tith-server.o \
-	tith-stdio.o
+	tith-stdio.o \
+	tith-strings.o
 
 NODELIST_OBJS := \
 	nodelist.o \
 	tith-file.o \
-	tith-nodelist.o
+	tith-nodelist.o \
+	tith-strings.o
 
 $(OBJDIR)%.o: %.c | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
