Switch from -lpthread to -pthread
The use of -lpthread has been deprecated long enough that we should
certainly stop using it by default.  Not using -pthread can cause
single-threaded implementation to be used as it does not define
_REENTRANT, so C library functions that have a version optimized
for non-threaded builds will use that instead of the threaded
version.

If anyone still needs -lpthread, we can maybe hack it in, but it's
been supported by GCC since at least 3.1.1 (July 25, 2002) and has
been supported by every version of Clang ever released.

Broke the build for DaiTengu, reported via IRC.

--- a/src/newifc/GNUmakefile
+++ b/src/newifc/GNUmakefile
@@ -3,7 +3,7 @@ CFLAGS += -DHAS_STDINT_H
 CFLAGS += -DHAS_INTTYPES_H
 CFLAGS += -g -std=c11 -Wall -Wextra -Wpedantic
 LDFLAGS += -L../conio/clang.freebsd.amd64.lib.portable -L../xpdev/clang.freebsd.amd64.lib.portable
-LIBS += -lpthread -lciolib_mt -lxpdev_mt -lcursesw -lm
+LIBS += -pthread -lciolib_mt -lxpdev_mt -lcursesw -lm
 
 VPATH = ../cutest:../xpdev
 
