Update comments to document commit 548be7e7e

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -221,7 +221,7 @@
 	;	DEBUG_RX_RSP		- Log responses received from remote clients/servers
 	;	RELAY_TX		- Use external SMTP relay server for sending mail
 	;	DEBUG_POP3		- Log details from POP3 sessions
-	;	ALLOW_RX_BY_NUMBER	- Allow mail received by user number (e.g. "1@yourbbs.com")
+	;	NO_READ_POP3            - Don't set READ msg attribute when RETR'd via POP3
 	;	NO_NOTIFY		- Do not send telegrams on new email receipt
 	;	ALLOW_SYSOP_ALIASES	- Receive mail sent to built-in sysop aliases (i.e. "sysop" and "postmaster")
 	;	USE_SUBMISSION_PORT	- Listen on the "MSA" service port for mail submissions
