Use git clone strategy for cleanup
We don't actually need a git copy here, but it looks like using
GIT_CLONE is the only way to have the gitlab-runner jobs delete the
project directory afterward.

Hopefully, this allows us to avoid infinately growing storage for
a runner.

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -1227,6 +1227,6 @@ spec:
   script:
     - rm -rf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}"
   variables:
-    GIT_STRATEGY: none
+    GIT_STRATEGY: clone
   dependencies: []
   when: always
