--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -1267,7 +1267,7 @@ spec:
     - touch ${CI_PIPELINE_ID}.ci
     - rm -rf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}"
     - cd ../../..
-    - for dir in */${CI_PROJECT_NAMESPACE}; do if [ -f $dir/${CI_PIPELINE_ID}.ci ]; then rm -rf $dir/; fi; done
+    - for dir in */${CI_PROJECT_NAMESPACE}; do if [ -f $dir/${CI_PROJECT_NAME}/${CI_PIPELINE_ID}.ci ]; then rm -rf $dir/; fi; done
   variables:
     GIT_STRATEGY: empty
   dependencies: []
