Switch from -Oz to -Os
-Oz was added to GCC in v12, which is not the default GCC on every
distro yet.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -32,8 +32,8 @@ ifdef DEBUG
  CFLAGS	+=	-g -O0 -Wall -pedantic -Wconversion -Wextra -Wno-format-truncation
  LDFLAGS +=	-g
 else
- CFLAGS	+=	-Oz -DNDEBUG -flto
- LDFLAGS +=	-Oz -flto -fwhole-program
+ CFLAGS	+=	-Os -DNDEBUG -flto
+ LDFLAGS +=	-Os -flto -fwhole-program
  ifeq ($(os),darwin)
   LDFLAGS +=	-Wl,-x,-dead_strip
  else
