Revert "ctrl/modopts.d is being deprecated in favor of ctrl/modopts"
This reverts commit c8788b4ba11116777b73655c66dc0e419a903744.

xtrnmenu.js uses sub-sections (e.g. xtrnmenu:game) and that would require
splitting into multiple .ini (e.g. xtrnmenu_game.ini).

--- a/ctrl/modopts.d/emailfiles.ini
+++ b/ctrl/modopts.d/emailfiles.ini
@@ -2,6 +2,7 @@
 
 ; Uncomment and modify values to over-ride defaults
 
+[emailfiles]
 ; maxfiles = 10
 ; maxfilesize = 10485760
 ; maxpending = 104857600
