--- a/ctrl/modopts.d/xtrnmenu.ini
+++ b/ctrl/modopts.d/xtrnmenu.ini
@@ -3,6 +3,8 @@
 
 ; Refer to the wiki for instructions on how to customize individual menus
 
+[xtrnmenu]
+
 ; Uncomment if you wish to have the mod hand over section menus to xtrn_sec.js
 ;use_xtrn_sec = true
 
