Add automsg, newuser_prompts, dyndns sections. Removed flashpolicyserver

--- a/ctrl/modopts.ini
+++ b/ctrl/modopts.ini
@@ -15,6 +15,13 @@
 	login_prompts = 10
 	inactive_hangup = 30
 	guest = true
+	legacy_prompts = false
+
+[newuser_prompts]
+	lang = false
+	backspace = true
+	mouse = true
+	exascii = true
 
 [newuser]
 	; Send new user welcome email (text/welcome.msg) to the new user
@@ -63,6 +70,24 @@
 	yesterday =
 	backup_level = 10
 
+[automsg]
+	; max_line_len = 76
+	; backup_level = 10
+	; line_fmt = " > %.79s\r\n"
+	; sysop_prompt = "\r\nAuto Message - ~Read, ~Write, ~Delete or ~Quit: "
+	; prompt = <AutoMsg text string>
+	; intro = "\r\nMaximum of 3 lines:\r\n"
+	; user_fmt = "%s #%d"
+	; header_fmt = <AutoMsgBy text string>
+	meme = true
+	; color = 0
+	; border = 0
+	; random = false
+	; max_length = 500
+	; width = 39
+	; justify = 0
+
+
 [xtrn_sec]
 	; Set to true to disable execution of prextrn.js and postxtrn.js for external programs
 	; when they are running as a logon event
@@ -110,15 +135,15 @@
 	; prompt_on_info_fmt: \r\n\x01n\x01cDo you wish to continue
     
 [chat_sec]
-	; Over-ride default IRC server/port and channel (if desired) here:
+	finger = true
+	imsg = true
+	irc = true
+	irc_seclevel = 90
+	; Over-ride default IRC server/port and channels (if desired), comma-separated lists here:
 	irc_server = irc.synchro.net 6667
 	irc_channel = #Synchronet
-
-[flashpolicyserver]
-	; If you want to allow flash clients to connect to additional ports, add them here as a comma
-	; separated list (e.g. 21,25).
-	; NOTE: Telnet, RLogin and SSH ports are already allowed, so do not need to be listed here
-	extra_ports=
+	; Can also specify list per server, e.g.
+	; irc.synchro.net = #synchronet, #bbs
 
 [jsonchat]
 	;see exec/load/json-server.js for help setting up a chat server
@@ -158,6 +183,15 @@
 
 [avatars]
 	export_freq = 7
+
+[dyndns]
+	password =
+	mx =
+	ip =
+	ip6 =
+	txt =
+	loc =
+	wildcard =
 
 ; echicken's web interface v4
 [web]
