--- a/ctrl/modopts/emailval.ini
+++ b/ctrl/modopts/emailval.ini
@@ -1,9 +1,7 @@
 ; Options for module: emailval.js
 
-; Users with exactly this security level require validation, always
+; Users with exactly this security level require validation:
 level_before_validation = 50
-; Users with security level <= this value require validation, if not validated
-level_requiring_validation =
 ; Security level awarded to user after validation, if higher than current:
 level_after_validation = 60
 
@@ -20,11 +18,11 @@ expiration_days_after_validation = N/A
 credits_added_after_validation = 0
 minutes_added_after_validation = 0
 
-; Code control
+; Code control:
 code_length = 16
 valid_chars = 
 
-; Display messages
+; Display messages:
 prompt =
 entercode =
 nomatch =
