Don't install msglist as mail read module by default
This module still fails pretty badly for narrow (e.g. 40col) terminals

A configurable ARS for some loadable would be a good idea and allow a sysop
to use built-in functions for some users and loadable modules for others.

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -10,6 +10,7 @@ timezone=-1
 settings=0x611f848
 date_fmt=0
 date_sep=/
+vdate_sep='
 date_verbal=true
 login=0
 lastnode=250
@@ -38,6 +39,7 @@ config_backup_level=5
 valuser=0
 erruser=0
 errlevel=2
+stats_interval=5
 
 [node_dir]
 	1=../node1/
@@ -128,13 +130,15 @@ errlevel=2
 [module]
 	logon=logon
 	logoff=
+	newuser_prompts=newuser_prompts
+	newuser_info=newuser_info
 	newuser=newuser
 	usercfg=user_settings
 	login=login
 	logout=
 	sync=
 	expire=
-	readmail=msglist mail -preview
+	readmail=
 	scanposts=
 	scansubs=
 	listmsgs=msglist
