Some missing keys added (saved with SCFG)

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -247,6 +247,7 @@
 	Options = ALLOW_POP3 | USE_SUBMISSION_PORT | TLS_SUBMISSION | TLS_POP3
 	SpamBlockDuration = 0
 	PostTo = 
+	ArchiveRequirements = 
 
 [FTP]	FTP(S) Server
 	AutoStart = true
@@ -288,6 +289,7 @@
 	;	NO_RECYCLE
 	Options = INDEX_FILE | ALLOW_QWK
 	PasvIp6Address = ::
+	LoginInfoSave = 
 
 [Web]	HTTP(S) Server
 	AutoStart = true
@@ -333,6 +335,8 @@
 	;       HAPROXY_PROTO
 	Options = NO_CGI | ALLOW_TLS | NO_HOST_LOOKUP
 	MaxConcurrentConnections = 10
+	LoginInfoSave = 
+	RemoteIPHeader = 
 
 [Services]
 	AutoStart = true
@@ -345,6 +349,7 @@
 	; 	NO_HOST_LOOKUP
 	Options = NO_HOST_LOOKUP
 	iniFileName = services.ini
+	LoginInfoSave = 
 
 [UNIX]
 	; User/group name to run as
