The new "xtrn" key for events added (by SCFG)

--- a/ctrl/xtrn.ini
+++ b/ctrl/xtrn.ini
@@ -210,6 +210,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:FIDOOUT]
 	cmd=%!sbbsecho%. -ni
 	days=128
@@ -221,6 +222,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:NEWSLINK]
 	cmd=?newslink.js
 	days=255
@@ -232,6 +234,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:CHKSPACE]
 	cmd=?chkspace.js %g %j
 	days=255
@@ -243,6 +246,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:SMB2SBL]
 	cmd=?sbbslist import
 	days=255
@@ -254,6 +258,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:SBL2SMB]
 	cmd=?sbbslist export
 	days=255
@@ -265,6 +270,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:SBLUPDAT]
 	cmd=?sbbslist update -preview
 	days=255
@@ -276,6 +282,7 @@
 	mdays=2
 	months=0
 	errlevel=3
+	xtrn=
 [event:SBLMAINT]
 	cmd=?sbbslist maint
 	days=255
@@ -287,6 +294,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:MSGMAINT]
 	cmd=%!smbutil%. mp1000 *.shd
 	days=129
@@ -298,6 +306,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:DELFILES]
 	cmd=?delfiles
 	days=255
@@ -309,6 +318,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:GETIMLST]
 	cmd=*getimlst
 	days=255
@@ -320,6 +330,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:LISTSERV]
 	cmd=?listserver.js
 	days=255
@@ -331,6 +342,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:DYNDNS]
 	cmd=?dyndns.js YOURPASS
 	days=255
@@ -342,6 +354,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:AVAT-IN]
 	cmd=?avatars import
 	days=255
@@ -353,6 +366,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 [event:AVAT-OUT]
 	cmd=?avatars export
 	days=255
@@ -364,6 +378,7 @@
 	mdays=0
 	months=0
 	errlevel=3
+	xtrn=
 
 [native:cmd.exe]
 
