Fix typo in default supported_archive_formats: 7z, not z7

--- a/ctrl/file.ini
+++ b/ctrl/file.ini
@@ -8,7 +8,7 @@ leech_pct=0
 leech_sec=60
 settings=4
 filename_maxlen=64
-supported_archive_formats=zip, z7, tgz
+supported_archive_formats=zip, 7z, tgz
 [viewer:0]
 	extension=TXT
 	cmd=*type %s
