Add	[bbs] MaxDumbTermInactivity key

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -110,6 +110,7 @@
 	; Setting a value to 0 disables that socket-inactivity detection during that
 	; particular client/user activity.
 	; H-exempt users will not be disconnected due to inactivity.
+	MaxDumbTermInactivity = 1m
 	MaxLoginInactivity = 10m
 	MaxNewUserInactivity = 1h
 	MaxSessionInactivity = 10m
