Increase default backup levels of user/mail/config files from 5 to 10
Enable log file rotation (10 x 10Mbyte files) by default.

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -26,16 +26,16 @@ new_install=true
 guest_msgscan_init=0
 hq_password=false
 min_password_length=4
-max_log_size=0
-max_logs_kept=0
+max_log_size=10M
+max_logs_kept=10
 ctrlkey_passthru=0
 max_getkey_inactivity=5m
 inactivity_warn=75
 spinning_pause_prompt=false
 create_self_signed_cert=true
-user_backup_level=5
-mail_backup_level=5
-config_backup_level=5
+user_backup_level=10
+mail_backup_level=10
+config_backup_level=10
 valuser=0
 erruser=0
 errlevel=2
